# services/iam-service/app/Http/Requests/Auth/RefreshTokenRequest.php
@@ -14,7 +14,7 @@ class RefreshTokenRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'token' => ['required', 'string'],
+            'refresh_token' => ['required', 'string'],
         ];
     }
 }
